[package]
name = "udpdup"
version = "0.1.1"
authors = ["Albibek <albibek@gmail.com>"]

[dependencies]
net2="^0.2"
futures="^0.1"
tokio-core="^0.1" 
bytes="^0.4"
clap="^2.23"
num_cpus="^1.4"
resolve="^0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
