[package]
name = "udpdup"
version = "0.1.3"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]

[dependencies]
clap="^2.23"
structopt="^0.0"
structopt-derive="^0.0"
net2="^0.2"
futures="^0.1"
tokio-core="^0.1" 
tokio-io="^0.1"
bytes="^0.4"
num_cpus="^1.4"
resolve="^0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
